--- a/app/src/main/res/layout/change_password_successful_layout.xml
+++ b/app/src/main/res/layout/change_password_successful_layout.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
+            android:id="@+id/passSuccLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -58,6 +59,7 @@ Thank you!"
             android:paddingTop="@dimen/_6sdp">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/btnCV"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_43sdp"
                 android:layout_marginStart="@dimen/_29sdp"
