--- a/app/src/main/res/drawable/roundeddialog.xml
+++ b/app/src/main/res/drawable/roundeddialog.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <solid android:color="@color/white" />
-    <corners android:topLeftRadius="40dp"
-        android:topRightRadius="40dp"/>
+    <corners android:topLeftRadius="@dimen/_20sdp"
+        android:topRightRadius="@dimen/_20sdp"/>
 </shape>
