--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -53,10 +53,23 @@
             android:textSize="@dimen/_12ssp"
             android:visibility="gone" />
 
+        <TextView
+            android:id="@+id/tvMessageChangePass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvMessage"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="@font/opensans_regular"
+            android:lineSpacingExtra="@dimen/_2sdp"
+            android:text="As a security measure, you will be logged \nout of your account once you successfully \nchange your password. "
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp"
+            android:visibility="gone" />
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/tvMessage"
+            android:layout_below="@+id/tvMessageChangePass"
             android:layout_marginTop="@dimen/_15sdp"
             android:fillViewport="true"
             android:scrollbars="none">
