--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -452,6 +452,15 @@
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp" />
 
+                <TextView
+                    android:id="@+id/privacyTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="@string/privay_policy"
+                    android:textColor="@color/primary_green"
+                    android:textSize="@dimen/_11ssp" />
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/nextCV"
                     android:layout_width="match_parent"
