--- a/app/src/main/res/layout/edit_email_successful_layout.xml
+++ b/app/src/main/res/layout/edit_email_successful_layout.xml
@@ -59,6 +59,7 @@ Thank you!"
             android:paddingTop="@dimen/_6sdp">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/editEmailLogoutCV"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_43sdp"
                 android:layout_marginStart="@dimen/_29sdp"
