--- a/app/src/main/res/layout/activity_withdraw_gift_card.xml
+++ b/app/src/main/res/layout/activity_withdraw_gift_card.xml
@@ -17,7 +17,7 @@
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/ic_x"
+                            android:src="@drawable/ic_chevron_left"
                             android:layout_marginTop="@dimen/_45sdp"
                             android:layout_marginBottom="@dimen/_14sdp"
                             />
