--- a/app/src/main/res/layout/bottom_sheet_alert_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_alert_dialog.xml
@@ -31,11 +31,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/opensans_bold"
-        android:text="Alert!"
+        android:text="@string/app_name"
         android:textColor="@color/black"
         android:textSize="@dimen/_16ssp"
-        android:visibility="visible"
-        android:gravity="center"/>
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/tvMessage"
@@ -45,8 +44,7 @@
         android:fontFamily="@font/opensans_regular"
         android:text="@string/faceiddisable"
         android:textColor="@color/primary_black"
-        android:textSize="@dimen/_12ssp"
-        android:gravity="center"/>
+        android:textSize="@dimen/_12ssp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvAction"
