--- a/app/src/main/res/layout/activity_addpayment_method.xml
+++ b/app/src/main/res/layout/activity_addpayment_method.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/_22sdp">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
-        >
+        android:scrollbars="none">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -19,8 +20,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_14sdp"
                 android:layout_marginTop="@dimen/_45sdp"
+                android:layout_marginBottom="@dimen/_14sdp"
                 android:src="@drawable/ic_x" />
 
             <TextView
@@ -34,8 +35,9 @@
                 android:textSize="@dimen/_16ssp" />
 
             <ImageView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_addpayment_method" />
 
             <TextView
@@ -51,22 +53,24 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:background="@drawable/paymentsborder"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/_11sdp"
+                android:paddingTop="@dimen/_11sdp"
+                android:paddingRight="@dimen/_7sdp"
+                android:paddingBottom="@dimen/_13sdp">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_19sdp"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    android:layout_marginBottom="@dimen/_22sdp"
+                    android:layout_marginRight="@dimen/_12sdp"
                     android:src="@drawable/ic__01_bank" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_11sdp"
                     android:layout_marginRight="@dimen/_20sdp"
-                    android:layout_marginBottom="@dimen/_12sdp"
                     android:orientation="vertical">
 
                     <TextView
@@ -75,7 +79,7 @@
                         android:layout_marginBottom="@dimen/_2sdp"
                         android:fontFamily="@font/opensans_semibold"
                         android:text="External Bank Account"
-                        android:textColor="@color/black"
+                        android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
                     <TextView
@@ -83,38 +87,42 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:text="Can be used for making Coyni purchases\nor withdrawing funds."
-                        android:textColor="@color/primary_black"
+                        android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_10ssp" />
                 </LinearLayout>
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_28sdp"
-                    android:layout_marginBottom="@dimen/_30sdp"
                     android:src="@drawable/ic_chevron_right" />
             </LinearLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_8sdp"
-                android:orientation="horizontal">
+                android:background="@drawable/paymentsborder"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/_11sdp"
+                android:paddingTop="@dimen/_16sdp"
+                android:paddingRight="@dimen/_7sdp"
+                android:paddingBottom="@dimen/_20sdp">
 
                 <ImageView
+                    android:id="@+id/imgDCardLogo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_19sdp"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    android:layout_marginBottom="@dimen/_22sdp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/_12sdp"
                     android:src="@drawable/ic_credit_card" />
 
                 <LinearLayout
-                    android:layout_width="@dimen/_190sdp"
+                    android:id="@+id/layoutDDetails"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_16sdp"
                     android:layout_marginRight="@dimen/_20sdp"
-                    android:layout_marginBottom="@dimen/_20sdp"
+                    android:layout_toLeftOf="@+id/imgDCardArrow"
+                    android:layout_toRightOf="@+id/imgDCardLogo"
                     android:orientation="vertical">
 
                     <TextView
@@ -123,7 +131,7 @@
                         android:layout_marginBottom="@dimen/_2sdp"
                         android:fontFamily="@font/opensans_semibold"
                         android:text="Debit Card"
-                        android:textColor="@color/black"
+                        android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
                     <TextView
@@ -131,39 +139,43 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:text="Visa or Mastercard debit cards"
-                        android:textColor="@color/primary_black"
+                        android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_10sdp" />
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/fiserIV"
+                    android:id="@+id/imgDCardArrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_14sdp"
-                    android:layout_marginTop="@dimen/_28sdp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:src="@drawable/ic_chevron_right" />
-            </LinearLayout>
+            </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_8sdp"
-                android:orientation="horizontal">
+                android:background="@drawable/paymentsborder"
+                android:paddingLeft="@dimen/_11sdp"
+                android:paddingTop="@dimen/_11sdp"
+                android:paddingRight="@dimen/_7sdp"
+                android:paddingBottom="@dimen/_13sdp">
 
                 <ImageView
+                    android:id="@+id/imgCCardLogo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_19sdp"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/_10sdp"
-                    android:layout_marginBottom="@dimen/_22sdp"
                     android:src="@drawable/ic_credit_card" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_16sdp"
-                    android:layout_marginBottom="@dimen/_20sdp"
                     android:layout_marginRight="@dimen/_14sdp"
+                    android:layout_toLeftOf="@+id/imgCCardArrow"
+                    android:layout_toRightOf="@+id/imgCCardLogo"
                     android:orientation="vertical">
 
                     <TextView
@@ -172,7 +184,7 @@
                         android:layout_marginBottom="@dimen/_2sdp"
                         android:fontFamily="@font/opensans_semibold"
                         android:text="Credit Card"
-                        android:textColor="@color/black"
+                        android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
                     <TextView
@@ -180,16 +192,19 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:text="Visa, MasterCard, Discover, and American \nExpress credit cards"
-                        android:textColor="@color/primary_black"
+                        android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_10sdp" />
                 </LinearLayout>
+
                 <ImageView
+                    android:id="@+id/imgCCardArrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_28sdp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/_12sdp"
                     android:src="@drawable/ic_chevron_right" />
-            </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
 
     </ScrollView>
