--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -9,6 +9,7 @@
     tools:context=".view.DashboardActivity">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-20dp"
@@ -16,8 +17,9 @@
         app:cardCornerRadius="15dp">
 
         <RelativeLayout
+            android:id="@+id/layoutMainHeader"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_229sdp">
+            android:layout_height="@dimen/_90sdp">
 
             <View
                 android:layout_width="match_parent"
@@ -182,9 +184,67 @@
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/layoutMenu"
+        android:layout_below="@+id/cvHeader"
+        android:layout_marginLeft="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_14sdp"
+        android:layout_marginRight="@dimen/_11sdp"
+        android:layout_marginBottom="@dimen/_12sdp"
+        app:cardCornerRadius="@dimen/_10sdp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imgHead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/_47sdp"
+                android:src="@drawable/ic_account_created"></ImageView>
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="159.8564453125dp"
+                android:layout_height="5.4189453125dp"
+                android:layout_below="@+id/imgHead"
+                android:layout_centerHorizontal="true"
+                android:background="#1c567675" />
+
+            <TextView
+                android:id="@+id/tvHead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/divider"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/_28sdp"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="You’re almost there!"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp"></TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvHead"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="Finish the set up your account in less than 5 min."
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp"></TextView>
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
+        android:id="@+id/layoutMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
