--- a/app/src/main/res/layout/activity_quick_action.xml
+++ b/app/src/main/res/layout/activity_quick_action.xml
@@ -4,178 +4,170 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_252sdp"
-    android:orientation="vertical"
-    android:background="@drawable/bg_core">
-        <View
-            android:layout_width="@dimen/_43sdp"
-            android:layout_height="@dimen/_2sdp"
-            android:background="@drawable/bg_core_colorfill"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_13sdp"
-            android:layout_marginBottom="@dimen/_23sdp"
-            />
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginRight="@dimen/_20sdp"
-            android:orientation="horizontal"
-            android:paddingTop="@dimen/_12sdp"
-            android:paddingBottom="@dimen/_14sdp"
-        >
-        <ImageView
-            android:layout_width="@dimen/_23sdp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_scan"
-            android:layout_marginRight="@dimen/_6sdp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Scan"
-            android:textColor="@color/black"
-            android:fontFamily="@font/opensans_semibold"
-            android:textSize="@dimen/_12ssp"
-            android:layout_marginLeft="@dimen/_9sdp"
-            />
-    </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/_1sdp"
-            android:background="@color/inactive_color"
-            android:layout_marginLeft="@dimen/_24sdp"
-            android:layout_marginRight="@dimen/_24sdp"
+    android:background="@drawable/bg_core"
+    android:orientation="vertical">
 
-            />
-        </LinearLayout>
+    <View
+        android:layout_width="@dimen/_43sdp"
+        android:layout_height="@dimen/_2sdp"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_13sdp"
+        android:layout_marginBottom="@dimen/_23sdp"
+        android:background="@drawable/bg_core_colorfill" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginRight="@dimen/_20sdp"
         android:orientation="horizontal"
-        >
+        android:paddingTop="@dimen/_12sdp"
+        android:paddingBottom="@dimen/_14sdp">
+
+        <ImageView
+            android:layout_width="@dimen/_23sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/_6sdp"
+            android:src="@drawable/ic_scan" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_9sdp"
+            android:fontFamily="@font/opensans_semibold"
+            android:text="Scan"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_1sdp"
+            android:layout_marginLeft="@dimen/_24sdp"
+            android:layout_marginRight="@dimen/_24sdp"
+            android:background="@color/inactive_color" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_20sdp"
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_24sdp"
-            android:src="@drawable/ic_send_icon"
             android:layout_marginTop="@dimen/_15sdp"
             android:layout_marginRight="@dimen/_6sdp"
+            android:src="@drawable/ic_send_icon" />
 
-
-            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pay/Request"
+            android:layout_marginLeft="9dp"
             android:layout_marginTop="@dimen/_14sdp"
             android:layout_marginBottom="@dimen/_16sdp"
             android:fontFamily="@font/opensans_semibold"
-            android:textSize="@dimen/_12ssp"
+            android:text="Pay/Request"
             android:textColor="@color/primary_black"
-            android:layout_marginLeft="9dp"
-            />
+            android:textSize="@dimen/_12ssp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <View
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_1sdp"
-            android:background="@color/inactive_color"
             android:layout_marginLeft="@dimen/_24sdp"
             android:layout_marginRight="@dimen/_24sdp"
-
-            />
+            android:background="@color/inactive_color" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginRight="@dimen/_20sdp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_23sdp"
-            android:src="@drawable/ic_buy_icon"
             android:layout_marginTop="@dimen/_12ssp"
             android:layout_marginRight="@dimen/_6sdp"
-            />
+            android:src="@drawable/ic_buy_icon" />
 
         <TextView
             android:id="@+id/clickTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_12sdp"
             android:layout_marginLeft="@dimen/_6sdp"
+            android:layout_marginTop="@dimen/_12sdp"
             android:layout_marginBottom="@dimen/_15sdp"
             android:fontFamily="@font/opensans_semibold"
             android:text="Buy Tokens"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <View
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_1sdp"
-            android:background="@color/inactive_color"
             android:layout_marginLeft="@dimen/_24sdp"
             android:layout_marginRight="@dimen/_24sdp"
-
-            />
+            android:background="@color/inactive_color" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginRight="@dimen/_20sdp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_23sdp"
-            android:src="@drawable/ic_withdraw_icon"
             android:layout_marginTop="@dimen/_12sdp"
             android:layout_marginRight="@dimen/_6sdp"
-            />
+            android:src="@drawable/ic_withdraw_icon" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Withdraw to USD"
-            android:fontFamily="@font/opensans_semibold"
-            android:textSize="@dimen/_12ssp"
-            android:textColor="@color/primary_black"
             android:layout_marginLeft="@dimen/_6sdp"
             android:layout_marginTop="@dimen/_12sdp"
             android:layout_marginBottom="@dimen/_14sdp"
-            />
+            android:fontFamily="@font/opensans_semibold"
+            android:text="Withdraw to USD"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <View
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_1sdp"
-            android:background="@color/inactive_color"
             android:layout_marginLeft="@dimen/_24sdp"
             android:layout_marginRight="@dimen/_24sdp"
-
-            />
+            android:background="@color/inactive_color" />
     </LinearLayout>
-
-
 </LinearLayout>
