--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -99,7 +99,8 @@
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="@dimen/_12ssp"
+                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/&amp;"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -177,7 +178,7 @@
                         android:id="@+id/etCPassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.!@#$%^_+-*?/;:'"
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/&amp;"
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="@string/confirm_password"
                         android:imeOptions="actionDone"
@@ -185,7 +186,8 @@
                         android:maxLength="12"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                         android:textColor="@color/text_color"
-                        android:textSize="@dimen/_12ssp" />
+                        android:textSize="@dimen/_12ssp"
+                        />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
