--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -25,59 +25,59 @@
                 android:layout_marginTop="-15dp"
                 app:cardCornerRadius="@dimen/_15sdp">
 
-            <LinearLayout
-                android:id="@+id/cpProfileLL"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/card_bottomradius"
-                android:orientation="vertical">
-
                 <LinearLayout
-                    android:id="@+id/cardviewProfile"
+                    android:id="@+id/cpProfileLL"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_164sdp"
-                    android:layout_alignParentTop="true"
-                    android:background="@drawable/ic_backgound_top_customer_profile"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/card_bottomradius"
                     android:orientation="vertical">
 
                     <LinearLayout
+                        android:id="@+id/cardviewProfile"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:paddingBottom="@dimen/_14sdp">
-
-                        <ImageView
-                            android:id="@+id/cpbackBtn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_21sdp"
-                            android:layout_marginTop="@dimen/_45sdp"
-                            android:src="@drawable/ic_back" />
-
-
-                    </LinearLayout>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="@dimen/_164sdp"
+                        android:layout_alignParentTop="true"
+                        android:background="@drawable/ic_backgound_top_customer_profile"
+                        android:orientation="vertical">
 
                         <LinearLayout
-                            android:id="@+id/customerDatailsLL"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:paddingBottom="@dimen/_14sdp">
 
-                            <RelativeLayout
+                            <ImageView
+                                android:id="@+id/cpbackBtn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_21sdp"
+                                android:layout_marginTop="@dimen/_45sdp"
+                                android:src="@drawable/ic_back" />
+
+
+                        </LinearLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/customerDatailsLL"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <RelativeLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
 
                                     <LinearLayout
                                         android:id="@+id/profileCredLL"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:layout_alignParentStart="true"
                                         android:layout_alignParentTop="true"
                                         android:layout_marginTop="@dimen/_11sdp"
-                                        android:layout_alignParentStart="true"
                                         android:layout_toStartOf="@+id/profilePicCL"
                                         android:orientation="vertical"
                                         android:paddingLeft="@dimen/_21sdp"
@@ -100,14 +100,12 @@
                                             android:fontFamily="@font/opensans_semibold"
                                             android:text="@string/accountid"
                                             android:textColor="#767676"
-                                            android:textSize="@dimen/_10ssp"
+                                            android:textSize="@dimen/_10ssp" />
 
-                                            />
-
-                                    <LinearLayout
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:orientation="horizontal">
+                                        <LinearLayout
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:orientation="horizontal">
 
                                             <TextView
                                                 android:id="@+id/cpAccountStatusTV"
@@ -117,18 +115,16 @@
                                                 android:fontFamily="@font/opensans_semibold"
                                                 android:text="@string/status_unverified"
                                                 android:textColor="@color/primary_black"
-                                                android:textSize="@dimen/_11ssp"
-
-                                                />
+                                                android:textSize="@dimen/_11ssp" />
 
                                             <TextView
-                                                android:id="@+id/cpStatusTV"
+                                                android:id="@+id/tvACStatus"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:layout_marginStart="5dp"
                                                 android:layout_marginTop="@dimen/_6sdp"
                                                 android:fontFamily="@font/opensans_semibold"
-                                                android:text="@string/unveri"
+                                                android:text=""
                                                 android:textColor="#FFA70F"
                                                 android:textSize="@dimen/_11ssp" />
 
@@ -141,16 +137,15 @@
                                         </LinearLayout>
 
 
-                                </LinearLayout>
+                                    </LinearLayout>
 
                                     <androidx.constraintlayout.widget.ConstraintLayout
                                         android:id="@+id/profilePicCL"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentRight="true"
-                                        android:layout_marginEnd="@dimen/_30ssp"
                                         android:layout_marginTop="@dimen/_15sdp"
-                                        >
+                                        android:layout_marginEnd="@dimen/_30ssp">
 
                                         <androidx.constraintlayout.widget.ConstraintLayout
                                             android:id="@+id/linearLayout"
@@ -178,31 +173,32 @@
                                                 app:layout_constraintTop_toTopOf="parent">
 
 
-                                            <ImageView
-                                                android:layout_width="wrap_content"
-                                                android:layout_height="wrap_content"
-                                                android:src="@color/primary_black" />
-                                        </androidx.cardview.widget.CardView>
+                                                <ImageView
+                                                    android:layout_width="wrap_content"
+                                                    android:layout_height="wrap_content"
+                                                    android:src="@color/primary_black" />
+                                            </androidx.cardview.widget.CardView>
 
+
+                                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                                        <ImageView
+                                            android:id="@+id/imgQRCode"
+                                            android:layout_width="@dimen/_23sdp"
+                                            android:layout_height="@dimen/_23sdp"
+                                            android:src="@drawable/ic_qr_code"
+                                            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+                                            app:layout_constraintEnd_toEndOf="@+id/linearLayout" />
 
                                     </androidx.constraintlayout.widget.ConstraintLayout>
-
-                                    <ImageView
-                                        android:id="@+id/imgQRCode"
-                                        android:layout_width="@dimen/_23sdp"
-                                        android:layout_height="@dimen/_23sdp"
-                                        android:src="@drawable/ic_qr_code"
-                                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-                                        app:layout_constraintEnd_toEndOf="@+id/linearLayout" />
-
-                                </androidx.constraintlayout.widget.ConstraintLayout>
-                            </RelativeLayout>
-                        </LinearLayout>
-                    </RelativeLayout>
+                                </RelativeLayout>
+                            </LinearLayout>
+                        </RelativeLayout>
 
 
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardviewYourAccount"
@@ -737,12 +733,12 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvLogout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_42sdp"
                 android:layout_marginStart="@dimen/_21sdp"
                 android:layout_marginTop="@dimen/_36sdp"
                 android:layout_marginEnd="@dimen/_21sdp"
-                android:layout_marginBottom="28dp"
-                app:cardCornerRadius="21dp">
+                android:layout_marginBottom="@dimen/_28sdp"
+                app:cardCornerRadius="@dimen/_21sdp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -766,7 +762,6 @@
                 android:layout_marginBottom="20dp"
                 android:background="@color/primary_color"
                 android:visibility="gone" />
-
 
         </LinearLayout>
 
