--- a/app/src/main/res/layout/activity_edit_email.xml
+++ b/app/src/main/res/layout/activity_edit_email.xml
@@ -74,7 +74,10 @@
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="@dimen/_12ssp"
+                    android:editable="false"
+                    android:focusable="false"
+                    android:clickable="false"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
